--- a/fe/src/pages/index.module.scss
+++ b/fe/src/pages/index.module.scss
@@ -30,7 +30,8 @@
 
 
 .PathFormContainer {
-    margin-top: 12px;
+    margin: 12px 8px;
+    
     overflow-y: hidden;
     position: absolute;
     overflow-x: hidden;
