--- a/fe/src/components/Header/index.module.scss
+++ b/fe/src/components/Header/index.module.scss
@@ -28,6 +28,8 @@
             height: 100%;
 
             .Item {
+                cursor: pointer;
+                
                 height: 100%;
                 width: 300px;
                 display: flex;
