--- a/fe/src/pages/global.scss
+++ b/fe/src/pages/global.scss
@@ -7,3 +7,9 @@ body {
     justify-content: space-around;
     align-items: center;
 }
+
+#viz{
+    height: 600px;
+    width: 600px;
+    background-color: "#d3d3d3";
+}
