--- a/fe/src/pages/overview/index.module.scss
+++ b/fe/src/pages/overview/index.module.scss
@@ -4,7 +4,7 @@
     height: calc( 100vh - 65px - 16px );
     align-items: stretch;
     position: relative;
-    iframe{
+    .neovis{
         width: 100%;
         border: none;
         background-color:white;
