--- a/fe/src/components/Header/index.module.scss
+++ b/fe/src/components/Header/index.module.scss
@@ -40,6 +40,11 @@
         }
 
         .Control {
+            .search{
+                margin-right: 1em;
+
+
+            }
             margin-right: 2rem;
             display: flex;
             justify-content: space-between;
@@ -51,8 +56,7 @@
             .ico {
                 width: 1.25rem;
                 height: 1.25rem;
-                font-size: 1.25rem;
-                margin-right: 22px;
+                margin-right: 1em;
             }
 
             .ava {
