--- a/fe/src/pages/patientAnalyze/index.module.scss
+++ b/fe/src/pages/patientAnalyze/index.module.scss
@@ -14,8 +14,8 @@
     width: 30px;
     height: 40px;
     //background: red;
-    margin-top: 48px;
-    margin-left: 89%;
+    margin-top: 4.5%;
+    margin-left: 70%;
     cursor: pointer;
 }
 .picture{
