1、部分实现病例总览完成度一栏 2、实现相关病例查询

--- a/fe/src/pages/patientAnalyze/index.module.scss
+++ b/fe/src/pages/patientAnalyze/index.module.scss
@@ -30,3 +30,8 @@
     border: none;
     background-color:white;
 }
+.tableContainer{
+    overflow-x: auto;
+    overflow-y: auto;
+    height: 40vh;
+}
