修正了画板无法撤销的问题

--- a/fe/src/components/drawboard/index.css
+++ b/fe/src/components/drawboard/index.css
@@ -131,3 +131,11 @@ header select {
 .save__controls button {
   margin-left: 5px;
 }
+
+.control_list {
+  position: fixed;
+  top: 160px;
+  left: 50px;
+  height: 50px;
+  width: 400px;
+}
