--- a/fe/src/pages/addroute/index.module.scss
+++ b/fe/src/pages/addroute/index.module.scss
@@ -69,8 +69,8 @@
 }
 .UploadButton{
     position: absolute;
-    right:  0px;
-    top: 15px;
+    right:  1vw;
+    top: 0.5vh;
     z-index: 10;
 }
 .show{
