--- a/fe/src/pages/statistic/index.module.scss
+++ b/fe/src/pages/statistic/index.module.scss
@@ -5,10 +5,10 @@
   height: 100%;
   margin-top: 5px;
 }
-.heatMap{
-  border: 2px dashed black;
+.mid{
+  border: 2px solid black;
   width: 100%;
-  height: 60vh;
+  height: 25vh;
   background-color: white;
   margin-left: 5px;
 }
@@ -31,21 +31,22 @@
   height: 45vh;
   background-color: white;
   margin-left: 10px;
-  margin-top: -15vh;
+  //margin-top: -15vh;
 }
 .bottomMid{
-  border: 2px solid black;
+  border: 2px dashed black;
   width: 100%;
-  height: 30vh;
+  height: 65vh;
   background-color: white;
   margin-left: 5px;
+  margin-top: -20vh;
 }
 .bottomLeft{
   border: 2px solid black;
   width: 100%;
   height: 45vh;
   background-color: white;
-  margin-top: -15vh;
+  //margin-top: -15vh;
 }
 .play{
   background-color: white;
@@ -54,4 +55,13 @@
   border-top:1px solid black;
   width: 100%;
   height: 22vh;
+}
+.weather{
+  //border:solid 1px #7ec8ea;
+  border:medium none;
+  width:100%;
+  height:12vh;
+}
+.process{
+  margin-left:20%;
 }
