5月7日demo，缺语音版

--- a/fe/src/components/Header/index.module.scss
+++ b/fe/src/components/Header/index.module.scss
@@ -1,7 +1,7 @@
 .Header {
     height: 65px;
     width: 100vw;
-    background-color: #232A35;
+    background-color: #021f4e;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -14,7 +14,7 @@
         align-items: center;
         font-size: 24px;
         text-align: left;
-        background-color: black;
+        background-color:  #021738;
     }
 
     .Nav {
