五月八日演示版

--- a/fe/src/pages/addroute/index.module.scss
+++ b/fe/src/pages/addroute/index.module.scss
@@ -73,6 +73,12 @@
     top: 0.8vh;
     z-index: 10;
 }
+// .generate{
+//     position: absolute;
+//     right:  0vw;
+//     top: 0.8vh;
+//     z-index: 10;
+// }
 .show{
     margin-top: -5px;
     margin-right: 8px;
