--- a/fe/src/pages/analyse/index.module.scss
+++ b/fe/src/pages/analyse/index.module.scss
@@ -1,5 +1,6 @@
 .Table {
     padding: 16px 16px;
+    margin: 0;
 }
 .picture00{
     background: url("../../assets/images/areaPic.jpg") no-repeat;
